# signal2noise

./: LICENSE  README.md  config.yaml  dataset_analysis.md  pyproject.toml  run_experiment.py  simulation.md
docs/: dataset.md  experiment.md  results.md
signal2noise/: __init__.py  __main__.py  calibration.py  cli.py  config.py  engine.py  entities.py  graphs.py  jira_calibration.py  logger.py  metrics.py  policies.py  resources.py
signal2noise/core/: __init__.py  agent.py  channel.py  simulation.py  task.py  task_graph.py  types.py
signal2noise/demand/: __init__.py  generator.py  rework.py
signal2noise/experiments/: __init__.py  presets.py  runner.py  sweep.py
signal2noise/metrics/: __init__.py  collectors.py  efficiency.py  phase.py  summary.py
signal2noise/protocols/: __init__.py  adaptive.py  async_only.py  base.py  sync_always.py
signal2noise/supply/: __init__.py  allocator.py  cognitive_load.py
signal2noise/viz/: __init__.py  plots.py
tests/: test_agent.py  test_calibration.py  test_cli_stress.py  test_demand.py  test_engine_math.py  test_engine_refactor.py  test_experiments.py  test_graphs.py  test_jira_calibration.py  test_metrics.py  test_metrics_new.py  test_policy.py  test_protocols.py  test_resources.py  test_sanity.py  test_simulation.py  test_supply.py  test_task_graph.py  test_v2_behavior.py
