[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal2noise"
version = "0.1.0"
description = "ABM simulator for rework propagation and coordination policy experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
s2n = "signal2noise.cli:main"

[tool.setuptools]
packages = ["signal2noise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
