[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal2noise"
version = "0.1.0"
description = "ABM simulator for rework propagation and coordination policy experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]
notebooks = ["jupyter", "plotly"]

[tool.setuptools.packages.find]
include = ["signal2noise*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
